# lilitun-remote-control

./: .gitignore  .gitmodules  00_docker_build  01_docker_server  README.md  build.sh
Common/: protos.h
ControlServer/: CMakeLists.txt  Makefile.am  config.c  config.h  configure.ac  fbops.c  fbops.h  getrandom.h  jpegdec.c  jpegdec.h  list.h  main.c  main.h  messaging.c  messaging.h  portctrl.c  portctrl.h  translator.c  translator.h  utils.c  utils.h
ControlServer/cert/: README
ControlServer/debian/: changelog  control  controlserver.conf  controlserver.config  controlserver.install  controlserver.postinst  controlserver.service  controlserver.templates  rules
ControlServer/web/: lighttpd.conf  startme.sh
ControlServer/web/www/: config.php  control.php  desktop.php  index.html  sessions.php
ControlServer/web/www/css/: style.css
ControlServer/web/www/downloads/: .gitignore
ControlServer/web/www/js/: scripts.js
RemoteDesktop/: Makefile.am  app.cxx  app.fl  app.h  base64.c  base64.h  configure.ac  getrandom.c  getrandom.h  jpegenc.c  jpegenc.h  list.c  macgrabber.c  main.cxx  projector.c  projector.h  pseudofs.h  resources.rc  wingrabber.cxx  xcbgrabber.c  xgrabber.h
RemoteDesktop/WebClient/: index.html  lilitun-remote-client.html  lilitun-remote-client.js  local.js  lz4dec.js  make_fs.sh  style.css
RemoteDesktop/linux/: AppRun  lilitun-remote-control.desktop.in
RemoteDesktop/osx/: Info.plist.in  PkgInfo  Projector.icns  create_icon.sh
WebClient/: lilitun-remote-client.html  lilitun-remote-client.js  lz4dec.html  lz4dec.js
cert/: 00_create_cert_remote  README
cmake/: darwin.cmake  darwin.cmake.in  mingw32.cmake
docker-build/: Dockerfile  gcc-disable-multilib.patch
docker-run/: Dockerfile
release/linux/: .gitignore
release/macos/: .gitignore
